# AndroidGo

./: .gitignore  CLAUDE.md  LICENSE  README.md  gradle.properties  settings.gradle.kts  test_on_device.sh
app/: build.gradle.kts
app/src/androidTest/java/org/snailtrail/androidgo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/engine/: katago.cfg
app/src/main/cpp/: CMakeLists.txt  gtp_client.cpp  gtp_client.h  jni_bridge.cpp
app/src/main/java/org/snailtrail/androidgo/: HistoryScreen.kt  MainActivity.kt
app/src/main/java/org/snailtrail/androidgo/engine/: EngineManager.kt  GtpEngine.kt
app/src/main/java/org/snailtrail/androidgo/game/: GoGame.kt  GoUtils.kt  SgfUtil.kt
app/src/main/java/org/snailtrail/androidgo/ui/: GameInfoBar.kt  NewGameDialog.kt  TitleBar.kt
app/src/main/java/org/snailtrail/androidgo/ui/board/: GoBoard.kt
app/src/main/java/org/snailtrail/androidgo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_about.xml  ic_back.xml  ic_history.xml  ic_load.xml  ic_new_game.xml  ic_save.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/org/snailtrail/androidgo/: ExampleUnitTest.kt
app/src/test/java/org/snailtrail/androidgo/game/: GoGameTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
